--- a/hume-helm/templates/eventstore-service.yml
+++ b/hume-helm/templates/eventstore-service.yml
@@ -13,7 +13,8 @@ spec:
       protocol: TCP
       name: eventstore
   selector:
-    app: {{ include "hume-helm.fullname" . }}-eventstore
+    app.kubernetes.io/component: hume-eventstore
+    {{- include "hume.selectorLabels" . | nindent 4 }}
 ---
 {{- if .Values.eventstore.metrics.enabled }}
 apiVersion: v1
@@ -31,7 +32,8 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    app: {{ include "hume-helm.fullname" . }}-eventstore
+    app.kubernetes.io/component: hume-eventstore
+    {{- include "hume.selectorLabels" . | nindent 4 }}
 {{- end }}
 ---
 {{- end }}
