--- a/hume-helm/templates/hume-api-ingress.yaml
+++ b/hume-helm/templates/hume-api-ingress.yaml
@@ -4,6 +4,7 @@ kind: Ingress
 metadata:
   name: {{ include "hume-helm.fullname" . }}-api-ingress
   labels:
+    app.kubernetes.io/component: hume-api
     {{- include "hume.labels" . | nindent 4 }}
   {{- if .Values.ingress.annotations }}
   annotations:
