--- a/hume-alerting/templates/alerting-operator-configmap.yaml
+++ b/hume-alerting/templates/alerting-operator-configmap.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "hume-alerting.fullname" . }}-operator-configmap
+  labels:
+    {{- include "hume-alerting.labels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-alerting-operator
 data:
   {{- if .Values.postgresqlAlertingOperator.enabled }}
   spring.datasource.url: "jdbc:postgresql://postgresql-alerting-operator:{{ .Values.postgresqlAlertingOperator.global.postgresql.auth.servicePort }}/{{ .Values.postgresqlAlertingOperator.global.postgresql.auth.database }}?rewriteBatchedStatements=true"
