--- a/hume-alerting/templates/service.yaml
+++ b/hume-alerting/templates/service.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "hume-alerting.fullname" . }}-controller
   labels:
     {{- include "hume-alerting.labels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-alerting-controller
 spec:
   type: {{ .Values.service.type }}
   ports:
