--- a/hume-helm/templates/api-configmap.yaml
+++ b/hume-helm/templates/api-configmap.yaml
@@ -4,7 +4,8 @@ kind: ConfigMap
 metadata:
   name: {{ include "hume-helm.fullname" . }}-api-configmap
   labels:
-  {{- include "hume.labels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-api
+    {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
   {{ toYaml . | indent 4 }}
