--- a/hume-helm/templates/media-configmap.yml
+++ b/hume-helm/templates/media-configmap.yml
@@ -4,7 +4,8 @@ kind: ConfigMap
 metadata:
   name: {{ include "hume-helm.fullname" . }}-media-configmap
   labels:
-  {{- include "hume.labels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-media
+    {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
   {{ toYaml . | indent 4 }}
