--- a/hume-helm/templates/service-web.yaml
+++ b/hume-helm/templates/service-web.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: {{ include "hume-helm.fullname" . }}-web
   labels:
+    app.kubernetes.io/component: hume-web
     {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
