--- a/hume-alerting/templates/service.yaml
+++ b/hume-alerting/templates/service.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "hume-alerting.fullname" . }}-controller
   labels:
     {{- include "hume-alerting.labels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-alerting-controller
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,7 +13,8 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ include "hume-alerting.fullname" . }}-controller
+    app.kubernetes.io/component: hume-alerting-controller
+    {{- include "hume-alerting.selectorLabels" . | nindent 4 }}
 ---
 {{- if .Values.controller.metrics.enabled }}
 apiVersion: v1
@@ -30,7 +32,8 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    app: {{ include "hume-alerting.fullname" . }}-controller
+    app.kubernetes.io/component: hume-alerting-controller
+    {{- include "hume-alerting.selectorLabels" . | nindent 4 }}
 {{- end }}
 ---
 {{- if .Values.operator.metrics.enabled }}
@@ -49,6 +52,7 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    app: {{ include "hume-alerting.fullname" . }}-operator
+    app.kubernetes.io/component: hume-alerting-operator
+    {{- include "hume-alerting.selectorLabels" . | nindent 4 }}
 {{- end }}
 ---
