--- a/hume-helm/templates/service-api.yml
+++ b/hume-helm/templates/service-api.yml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: {{ include "hume-helm.fullname" . }}-api
   labels:
+    app.kubernetes.io/component: hume-api
     {{- include "hume.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.api.service.type }}
@@ -12,7 +13,8 @@ spec:
       protocol: TCP
       name: api
   selector:
-    app: {{ include "hume-helm.fullname" . }}-api
+    app.kubernetes.io/component: hume-api
+    {{- include "hume.selectorLabels" . | nindent 4 }}
 ---
 {{- if .Values.api.metrics.enabled }}
 apiVersion: v1
@@ -20,6 +22,7 @@ kind: Service
 metadata:
   name: {{ include "hume-helm.fullname" . }}-api-metrics
   labels:
+    app.kubernetes.io/component: hume-api
     {{- include "hume.labels" . | nindent 4 }}
     obs.hume.k8s.io/component: api-metrics
 spec:
@@ -30,6 +33,7 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    app: {{ include "hume-helm.fullname" . }}-api
+    app.kubernetes.io/component: hume-api
+    {{- include "hume.selectorLabels" . | nindent 4 }}
 {{- end }}
 ---
