--- a/hume-helm/templates/service-orchestra.yml
+++ b/hume-helm/templates/service-orchestra.yml
@@ -4,6 +4,7 @@ kind: Service
 metadata:
   name: {{ include "hume-helm.fullname" . }}-orchestra
   labels:
+    app.kubernetes.io/component: hume-orchestra
     {{- include "hume.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.orchestra.service.type }}
@@ -13,7 +14,8 @@ spec:
       protocol: TCP
       name: orchestra
   selector:
-    app: {{ include "hume-helm.fullname" . }}-orchestra
+    {{- include "hume.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-orchestra
 {{- end }}
 ---
 {{- if .Values.orchestra.enabled -}}
@@ -25,6 +27,7 @@ metadata:
   labels:
     {{- include "hume.labels" . | nindent 4 }}
     obs.hume.k8s.io/component: orchestra-metrics
+    app.kubernetes.io/component: hume-orchestra
 spec:
   type: {{ .Values.orchestra.metrics.service.type }}
   ports:
@@ -33,7 +36,8 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    app: {{ include "hume-helm.fullname" . }}-orchestra
+    {{- include "hume.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-orchestra
 {{- end }}
 {{- end }}
 ---
@@ -45,6 +49,7 @@ kind: Service
 metadata:
   name: {{ include "hume-helm.fullname" $ }}-orchestra-webhook-{{ $index }}
   labels:
+    app.kubernetes.io/component: hume-orchestra
     {{- include "hume.labels" $ | nindent 4 }}
 spec:
   type: {{ $.Values.orchestra.webhooks.service.type }}
@@ -54,7 +59,7 @@ spec:
       protocol: TCP
       name: orchestra-webhook-{{ $index }}
   selector:
-    statefulset.kubernetes.io/pod-name: {{ include "hume-helm.fullname" $ }}-orchestra-{{ $index }}
----
+    {{- include "hume.selectorLabels" $ | nindent 4 }}
+    app.kubernetes.io/component: hume-orchestra
 {{- end }}
 {{- end }}
