--- a/hume-helm/templates/service-web.yaml
+++ b/hume-helm/templates/service-web.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: {{ include "hume-helm.fullname" . }}-web
   labels:
+    app.kubernetes.io/component: hume-web
     {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
@@ -16,4 +17,5 @@ spec:
       protocol: TCP
       name: web
   selector:
-    app: {{ include "hume-helm.fullname" . }}-web
+    app.kubernetes.io/component: hume-web
+    {{- include "hume.selectorLabels" . | nindent 4 }}
