--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -90,6 +90,9 @@ web:
   env: []
     # - name: KEYCLOAK_URL
     #   value: https://myexistingkeycloak.com
+  extraHeaders: []
+    # - add_header X-Custom1 "custom header 1";
+    # - add_header X-Custom2 "custom header 2";
 api:
   image:
     name: "hume-api"
