--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: hume
 home: https://www.graphaware.com
-version: 2.28.0
-appVersion: 2.28.0
+version: 2.28.1-SNAPSHOT
+appVersion: 2.28.1-SNAPSHOT
 type: application
 icon: https://s3.eu-west-1.amazonaws.com/www-graphaware-com.infra.graphaware.com/favicon.ico
 keywords:
@@ -38,6 +38,6 @@ dependencies:
       alias: keycloak
       condition: keycloak.internal.enabled
     - name: hume-alerting
-      version: 2.27.4
+      version: 2.28.1-SNAPSHOT
       repository: oci://docker.graphaware.com/public
       condition: alerting.enabled
