--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -38,6 +38,6 @@ dependencies:
       alias: keycloak
       condition: keycloak.internal.enabled
     - name: hume-alerting
-      version: 2.27.4
+      version: 3.0.0-SNAPSHOT
       repository: oci://docker.graphaware.com/public
       condition: alerting.enabled
